; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/wireless/ath/ath10k/extr_p2p.c_ath10k_p2p_noa_ie_len_compute.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/wireless/ath/ath10k/extr_p2p.c_ath10k_p2p_noa_ie_len_compute.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wmi_p2p_noa_info = type { i32, i32 }

@WMI_P2P_OPPPS_ENABLE_BIT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.wmi_p2p_noa_info*)* @ath10k_p2p_noa_ie_len_compute to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @ath10k_p2p_noa_ie_len_compute(%struct.wmi_p2p_noa_info* %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca %struct.wmi_p2p_noa_info*, align 8
  %4 = alloca i64, align 8
  store %struct.wmi_p2p_noa_info* %0, %struct.wmi_p2p_noa_info** %3, align 8
  store i64 0, i64* %4, align 8
  %5 = load %struct.wmi_p2p_noa_info*, %struct.wmi_p2p_noa_info** %3, align 8
  %6 = getelementptr inbounds %struct.wmi_p2p_noa_info, %struct.wmi_p2p_noa_info* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %17, label %9

9:                                                ; preds = %1
  %10 = load %struct.wmi_p2p_noa_info*, %struct.wmi_p2p_noa_info** %3, align 8
  %11 = getelementptr inbounds %struct.wmi_p2p_noa_info, %struct.wmi_p2p_noa_info* %10, i32 0, i32 1
  %12 = load i32, i32* %11, align 4
  %13 = load i32, i32* @WMI_P2P_OPPPS_ENABLE_BIT, align 4
  %14 = and i32 %12, %13
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %17, label %16

16:                                               ; preds = %9
  store i64 0, i64* %2, align 8
  br label %32

17:                                               ; preds = %9, %1
  %18 = load i64, i64* %4, align 8
  %19 = add i64 %18, 6
  store i64 %19, i64* %4, align 8
  %20 = load i64, i64* %4, align 8
  %21 = add i64 %20, 3
  store i64 %21, i64* %4, align 8
  %22 = load i64, i64* %4, align 8
  %23 = add i64 %22, 2
  store i64 %23, i64* %4, align 8
  %24 = load %struct.wmi_p2p_noa_info*, %struct.wmi_p2p_noa_info** %3, align 8
  %25 = getelementptr inbounds %struct.wmi_p2p_noa_info, %struct.wmi_p2p_noa_info* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = sext i32 %26 to i64
  %28 = mul i64 %27, 4
  %29 = load i64, i64* %4, align 8
  %30 = add i64 %29, %28
  store i64 %30, i64* %4, align 8
  %31 = load i64, i64* %4, align 8
  store i64 %31, i64* %2, align 8
  br label %32

32:                                               ; preds = %17, %16
  %33 = load i64, i64* %2, align 8
  ret i64 %33
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
